QQmlContext: Don't redeclare metatype for QList<QObject *>

Metatypes for QList's of registered types are automatically declared by
Qt already. Redeclaring such metatypes may cause problems when building
source core that uses such metatypes in headers processed by moc.

Fixes: QTBUG-102965
Change-Id: I2b29792b949cd3d6fefd3d9a916c8a800208e722
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit caf35f0fedcebb3ce84045f1227dfe029bb12e43)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>