src/qml/qml/qqmlcontext.h
@@ -108,6 +108,4 @@ private:
 };
 QT_END_NAMESPACE
 
-Q_DECLARE_METATYPE(QList<QObject*>)
-
 #endif // QQMLCONTEXT_H
